--- a/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/MainWindow.xaml
@@ -1,14 +1,15 @@
-﻿<Window x:Class="WpfApp2.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
-        Height="550" Width="800" WindowStartupLocation="CenterScreen" WindowStyle="None"
+        xmlns:Properties="clr-namespace:WpfApp2.Properties" x:Class="WpfApp2.MainWindow"
+        Height="585" Width="800" WindowStartupLocation="CenterScreen" WindowStyle="None"
         AllowsTransparency="True" Background="Transparent">
 
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
     </Window.Resources>
-    
+
     <Border Background="#eff2f7" CornerRadius="30" MouseDown="Border_MouseDown" MouseLeftButtonDown="Border_MouseLeftButtonDown">
         <Grid>
 
@@ -44,10 +45,10 @@
                                    DockPanel.Dock="Top" TextAlignment="Center" Margin="5 25 0 10"/>
                         <TextBlock Text="Trenowanko" Foreground="#d0bfff" FontSize="14" FontWeight="SemiBold" 
                                    DockPanel.Dock="Top" TextAlignment="Center" />
-                        
+
                         <!--Separator w menu-->
                         <Separator Margin="25" DockPanel.Dock="Top" Height="0.8" Background="#7e5fdc"/>
-                        
+
                         <!--Menu guziory-->
                         <StackPanel DockPanel.Dock="Top">
                             <Button Style="{StaticResource menuButton}">
@@ -84,9 +85,9 @@
                                     <TextBlock Text="Czat"/>
                                 </StackPanel>
                             </Button>
-                            
+
                         </StackPanel>
-                        
+
                         <Button Style="{StaticResource menuButton}" VerticalAlignment="Bottom" DockPanel.Dock="Bottom" Margin="15 0 15 20">
                             <StackPanel Orientation="Horizontal">
                                 <Icon:PackIconMaterial Kind="Logout" Style="{StaticResource menuButtonIcon}"/>
@@ -98,7 +99,7 @@
                 </Border>
 
             </Grid>
-            
+
             <!--Main Section-->
             <Grid Grid.Column="1" Margin="30 20 20 20">
                 <Grid.RowDefinitions>
@@ -110,16 +111,16 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
-                
+
                 <!--wyszukiwara-->
                 <Grid Width="300" HorizontalAlignment="Left">
                     <TextBlock Margin="20 0" VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False"
                                Panel.ZIndex="1" Text="Wyszukiwarka"
-                               Visibility="{Binding ElementName=txtSearch,Path=Text.IsEmpty,Converter={StaticResource BoolToVis}}"/>
+                               Visibility="{Binding Text.IsEmpty, Converter={StaticResource BoolToVis}, ElementName=txtSearch}"/>
                     <TextBox x:Name="txtSearch" Style="{StaticResource textboxSearch}" />
-                    
-                    
-                    
+
+
+
                     <Icon:PackIconMaterial Kind="Magnify" Width="15" Height="15" VerticalAlignment="Center"
                                            Margin="0 0 15 0" Foreground="#b0b9c6" HorizontalAlignment="Right" />
                 </Grid>
@@ -131,13 +132,13 @@
                 <Button Style="{StaticResource topButton}" Margin="0 0 55 0" HorizontalAlignment="Right">
                     <Icon:PackIconMaterial Kind="Bell"/>
                 </Button>
-                
+
                 <!--StronaTytułowa-->
                 <TextBlock Text="Członkowie" Grid.Row="1" FontSize="32" FontWeight="SemiBold" Margin="0 20 0 0"
                            HorizontalAlignment="Left" Foreground="#121518"/>
-                
+
                 <!--Dodawanie Członkow-->
-                <Button Style="{StaticResource addButton}">
+                <Button Style="{StaticResource addButton}" Click="Button_Click">
                     <StackPanel Orientation="Horizontal">
                         <Icon:PackIconMaterial Kind="Plus" VerticalAlignment="Center" Width="11" Height="11" Margin="0 1 8 0"/>
                         <TextBlock Text="Dodaj członka"/>
@@ -147,13 +148,13 @@
                 <!--Separator-->
                 <Separator Height="1" Grid.Row="3" Background="#dae2ea" Margin="0 -1 0 10"/>
                 <!--Guziory-->
-                    <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="0 10 0 0">
-                        <Button Content="Trenerzy" Style="{StaticResource tabButton}" BorderBrush="#784ff2" />
-                        <Button Content="Klienci" Style="{StaticResource tabButton}" />
-                        <Button Content="Historia" Style="{StaticResource tabButton}" />
+                <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="0 10 0 0">
+                    <Button Content="Trenerzy" Style="{StaticResource tabButton}" BorderBrush="#784ff2" />
+                    <Button Content="Klienci" Style="{StaticResource tabButton}" />
+                    <Button Content="Historia" Style="{StaticResource tabButton}" />
                 </StackPanel>
                 <!--Tytul-K-->
-                <TextBlock Text="68 Użytkowników" Grid.Row="4" FontSize="18" FontWeight="SemiBold"
+                <TextBlock Text="Użytkownikownicy" Grid.Row="4" FontSize="18" FontWeight="SemiBold" Name="Staty"
                            Foreground="#121518" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
                 <TextBlock Text="Filtruj" Grid.Row="4" FontSize="13" FontWeight="SemiBold" Margin="0 0 115 0"
@@ -162,29 +163,118 @@
                 <!--Filtrowanie-->
                 <Grid Width="200" HorizontalAlignment="Right" Grid.Row="4">
                     <TextBlock Margin="15 0" VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False"
-               Panel.ZIndex="1" Text="Wyszukaj członków"
-               Visibility="{Binding ElementName=txtSearch,Path=Text.IsEmpty,Converter={StaticResource BoolToVis}}"/>
+               Panel.ZIndex="1" Text="Wyszukaj członków" Name="txtFilterText" />
 
-                    <TextBox x:Name="txtFilter" Style="{StaticResource textboxFilter}" />
+                    <TextBox x:Name="txtFilter" Style="{StaticResource textboxFilter}" TextChanged="SearchUsers"/>
                 </Grid>
-            <!--Członkowie-->
+                <!--Członkowie-->
+                <DataGrid Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" RowStyle="{DynamicResource DataGridRowStyle1}" Grid.Row="5" x:Name="membersDataGrid" SelectionChanged="membersDataGrid_SelectionChanged" Visibility="Visible">
 
-            <!--Sekcja Strony-->
+                    <DataGrid.Columns>
+                        <DataGridCheckBoxColumn CanUserResize="False" Width="Auto">
+                            <DataGridCheckBoxColumn.HeaderTemplate>
+                                <DataTemplate>
+                                    <CheckBox/>
+
+                                </DataTemplate>
+
+                            </DataGridCheckBoxColumn.HeaderTemplate>
+                        </DataGridCheckBoxColumn>
+                        <DataGridTextColumn Header="#" IsReadOnly="True" CanUserResize="False" Width="Auto" Binding="{Binding Number}"/>
+
+                        <DataGridTemplateColumn Header="Członek" IsReadOnly="True" Width="*">
+
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Border Width="25" Height="25" CornerRadius="50" Margin="0 0 10 0" Background="Violet">
+                                            <TextBlock Text="{Binding Character}" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" Margin="0 0 0 1"/>
+                                        </Border>
+                                        <TextBlock Text="{Binding Name}" VerticalAlignment="Center"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+
+                        <DataGridTextColumn Header="Pozycja" IsReadOnly="True" CanUserResize="False" Width="*" Binding="{Binding Position}"/>
+                        <DataGridTextColumn Header="Email" IsReadOnly="True" CanUserResize="False" Width="*" Binding="{Binding Email}"/>
+                        <DataGridTextColumn Header="Nr.Telefonu" IsReadOnly="True" CanUserResize="False" Width="*" Binding="{Binding Phone}"/>
+
+                        <DataGridTemplateColumn Header="Operacje" IsReadOnly="True" Width="Auto">
+
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Button Style="{StaticResource ResourceKey=gridRemoveButton}" Click="usun" Tag="{Binding Number}">
+                                            <Icon:PackIconMaterial Kind="DeleteOutline" Style="{StaticResource gridButtonIcon}"/>
+                                        </Button>
+
+                                        <Button Style="{StaticResource ResourceKey=gridEditButton}" Click="edit" Tag="{Binding Number}" Margin="5 0 0 0">
+                                            <Icon:PackIconMaterial Kind="AccountEditOutline" Style="{StaticResource gridButtonIcon}"/>
+                                        </Button>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+
+                <StackPanel Grid.Row="5" Visibility="Collapsed" Name="edit_content">
+                    <GroupBox Header="Imię">
+                        <TextBox Name="name" HorizontalAlignment="Left" Width="538" Height="26" Background="Transparent" BorderBrush="Transparent" SelectionBrush="Transparent"></TextBox>
+                    </GroupBox>
+
+                    <GroupBox Header="Pozycja">
+                        <TextBox Name="position" HorizontalAlignment="Left" Width="538" Height="26" Background="Transparent" BorderBrush="Transparent" SelectionBrush="Transparent"></TextBox>
+                    </GroupBox>
+
+                    <GroupBox Header="Email">
+                        <TextBox Name="email" HorizontalAlignment="Left" Width="538" Height="26" Background="Transparent" BorderBrush="Transparent" SelectionBrush="Transparent"/>
+                    </GroupBox>
+
+                    <GroupBox Header="Telefon">
+                        <TextBox Name="phone" HorizontalAlignment="Left" Width="540" Height="26" Background="Transparent" BorderBrush="Transparent" SelectionBrush="Transparent"/>
+                    </GroupBox>
+
+                    <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
+                        <Button Cursor="Cross" Click="edit_save" Name="edit_button"  Background="#7950f2" Foreground="#ffffff" BorderBrush="Transparent" FontWeight="Bold" FontSize="15" Style="{StaticResource EditActionButton}">Zapisz</Button>
+
+                        <Button Cursor="Cross" Click="edit_cancel" Background="#FFF25050" Foreground="#ffffff" Padding="10 5 10 5" BorderBrush="Transparent" Margin="15 0 0 0" FontWeight="Bold" FontSize="15" Style="{StaticResource EditActionButton}">Anuluj</Button>
+                    </StackPanel>
+                </StackPanel>
+
+                <!--Sekcja Strony-->
                 <Border Grid.Row="6" HorizontalAlignment="Right" BorderBrush="#dee4ec" BorderThickness="1"
                         CornerRadius="5" Padding="5" Background="White" Margin="0 10 10 10">
                     <StackPanel Orientation="Horizontal">
-                        <Button>
+                        <Button Style="{StaticResource pagingButton}">
 
-                            <Icon:PackIconMaterial Kind="ChevronLeft"/>
+                            <Icon:PackIconMaterial Kind="ChevronLeft" Style="{StaticResource pagingButtonIcon}"/>
 
                         </Button>
-                        
-                    </StackPanel>         
-                    
-                </Border>               
+
+                        <Rectangle Width="1" Fill="#dee4ec" Margin="3 7" />
+                        <Button Style="{StaticResource pagingButton}" Content="1" Background="#7950f2" Foreground="#ffffff"/>
+                        <Button Style="{StaticResource pagingButton}" Content="2"/>
+                        <Button Style="{StaticResource pagingButton}" Content="3"/>
+
+                        <TextBlock Text="..." Foreground="#6c7682" VerticalAlignment="Center" FontSize="15" Margin="10 0"/>
+
+                        <Button Style="{StaticResource pagingButton}" Content="10"/>
+                        <Button Style="{StaticResource pagingButton}" Content="11"/>
+                        <Button Style="{StaticResource pagingButton}" Content="12"/>
+
+                        <Rectangle Width="1" Fill="#dee4ec" Margin="3 7"/>
+                        <Button Style="{StaticResource pagingButton}">
+                            <Icon:PackIconMaterial Kind="ChevronRight" Style="{StaticResource pagingButtonIcon}"/>
+                        </Button>
+
+                    </StackPanel>
+
+                </Border>
             </Grid>
-                
+
         </Grid>
-               
+
     </Border>
 </Window>
